spring-petclinic/k8s/petclinic-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: app

  labels:
    name: app
    environment: development

  annotations:
    owner: team-1
