spring-petclinic/k8s/petclinic-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-service
  namespace: app
spec:
  type: ClusterIP #ClusterIP # 1. ClusterIP에서 NodePort로 변경!
  selector:
    app: petclinic
  ports:
  - port: 80
    targetPort: 8080
