spring-petclinic/k8s/petclinic-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-service
  namespace: app
spec:
  ingressClassName: nginx
  rules:
  - host: app.team1.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: petclinic-service
            port:
              number: 80
